--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <children>
-      <Button layoutX="35.0" layoutY="220.0" mnemonicParsing="false" text="Войти" onAction="#login"/>
+      <Button layoutX="35.0" layoutY="220.0" mnemonicParsing="false" text="Войти" onAction="#login" fx:id="loginSignUpButton"/>
       <Button layoutX="120.0" layoutY="220.0" mnemonicParsing="false" text="Регистрация" onAction="#registration"  />
       <PasswordField layoutX="51.0" layoutY="137.0" />
       <TextField layoutX="51.0" layoutY="84.0" fx:id="loginUser" />
