--- a/src/sample/CreateProject.fxml
+++ b/src/sample/CreateProject.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.CreateProjectController">
    <children>
-      <Button layoutX="81.0" layoutY="128.0" mnemonicParsing="false" text="+Создать проект">
+      <Button layoutX="81.0" layoutY="128.0" mnemonicParsing="false" text="+Создать проект" onAction="#createProject" fx:id="createProject">
          <font>
             <Font size="16.0" />
          </font>
