--- a/src/sample/Registration.fxml
+++ b/src/sample/Registration.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="107.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Какая то форма регистрации">
+      <Text layoutX="173.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Заполняем данные">
          <font>
             <Font size="29.0" />
          </font>
