--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -1,25 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
    <children>
-      <Text layoutX="64.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название проекта :" />
-      <Text layoutX="73.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Общая площадь :" />
-      <Text layoutX="97.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Помещения :" />
-      <Text layoutX="41.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Стоимость ДП за кв.м. :" />
-      <Text layoutX="77.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Скидка за ДП % :" />
-      <Text layoutX="96.0" layoutY="387.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Этап оплаты :" />
-      <Button layoutX="177.0" layoutY="214.0" mnemonicParsing="false" text="+ Добавить помещение" />
-      <Button layoutX="177.0" layoutY="370.0" mnemonicParsing="false" text="+ Добавить Этап" />
-      <TextField layoutX="177.0" layoutY="124.0" />
-      <TextField layoutX="177.0" layoutY="166.0" />
-      <TextField layoutX="177.0" layoutY="265.0" />
-      <TextField layoutX="177.0" layoutY="315.0" />
-      <Button layoutX="274.0" layoutY="511.0" mnemonicParsing="false" text="Сформировать" />
+      <MenuBar layoutY="2.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Проект">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Сохранить" />
+                  <MenuItem mnemonicParsing="false" text="Закрыть" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="ДП">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Строители">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+            <Menu mnemonicParsing="false" text="Смежники">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="АК">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Материалы">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Стены" />
+                  <MenuItem mnemonicParsing="false" text="Пол" />
+                  <MenuItem mnemonicParsing="false" text="Потолок" />
+                  <MenuItem mnemonicParsing="false" text="Другое" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Сантехника">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Мебель">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Свет">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Техника">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Декор">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Статистика">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </AnchorPane>
