--- a/src/sample/Registration.fxml
+++ b/src/sample/Registration.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -14,9 +13,14 @@
             <Font size="29.0" />
          </font>
       </Text>
-      <TextField layoutX="225.0" layoutY="96.0" />
-      <PasswordField layoutX="225.0" layoutY="134.0" />
-      <PasswordField layoutX="226.0" layoutY="175.0" />
-      <Button fx:id="registrationButton" layoutX="242.0" layoutY="228.0" mnemonicParsing="false" onAction="#registration" text="Зарегистрировать" />
+      <TextField id="signUpPhone" layoutX="226.0" layoutY="125.0" />
+      <Button fx:id="registrationButton" layoutX="236.0" layoutY="329.0" mnemonicParsing="false" onAction="#registration" text="Зарегистрироваться" />
+      <Text layoutX="234.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ведите номер телефона" />
+      <Text layoutX="261.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите почту" />
+      <Text layoutX="261.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите логин" />
+      <TextField id="signUpMail" layoutX="226.0" layoutY="168.0" />
+      <TextField id="signUpLogin" layoutX="226.0" layoutY="209.0" />
+      <Text layoutX="257.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите пароль" />
+      <TextField id="signUpPassword" layoutX="226.0" layoutY="251.0" />
    </children>
 </AnchorPane>
