--- a/src/sample/Registration.fxml
+++ b/src/sample/Registration.fxml
@@ -6,21 +6,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RegistrationController">
-   <children>
-      <Text layoutX="173.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Заполняем данные">
-         <font>
-            <Font size="29.0" />
-         </font>
-      </Text>
-      <TextField id="signUpPhone" layoutX="226.0" layoutY="125.0" />
-      <Button fx:id="registrationButton" layoutX="236.0" layoutY="329.0" mnemonicParsing="false" onAction="#registration" text="Зарегистрироваться" />
-      <Text layoutX="234.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ведите номер телефона" />
-      <Text layoutX="261.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите почту" />
-      <Text layoutX="261.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите логин" />
-      <TextField id="signUpMail" layoutX="226.0" layoutY="168.0" />
-      <TextField id="signUpLogin" layoutX="226.0" layoutY="209.0" />
-      <Text layoutX="257.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите пароль" />
-      <TextField id="signUpPassword" layoutX="226.0" layoutY="251.0" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="sample.RegistrationController">
+    <children>
+        <Text layoutX="173.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Заполняем данные">
+            <font>
+                <Font size="29.0"/>
+            </font>
+        </Text>
+        <TextField fx:id="signUpPhone" layoutX="226.0" layoutY="125.0"/>
+        <Button layoutX="236.0" layoutY="329.0" mnemonicParsing="false" onAction="#registration" fx:id="registrationButton"
+                text="Зарегистрироваться"/>
+        <Text layoutX="234.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ведите номер телефона"/>
+        <Text layoutX="261.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите почту"/>
+        <Text layoutX="261.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите логин"/>
+        <TextField fx:id="signUpMail" layoutX="226.0" layoutY="168.0"/>
+        <TextField fx:id="signUpLogin" layoutX="226.0" layoutY="209.0"/>
+        <Text layoutX="257.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Введите пароль"/>
+        <TextField fx:id="signUpPassword" layoutX="226.0" layoutY="251.0"/>
+    </children>
 </AnchorPane>
