--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EditProjectController">
@@ -38,7 +40,7 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Материалы">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Добавить" />
+                  <MenuItem fx:id="addButton" mnemonicParsing="false" text="Добавить" onAction="#addMaterial" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Сантехника">
@@ -73,5 +75,15 @@
             </Menu>
         </menus>
       </MenuBar>
+      <TableView layoutY="75.0" prefHeight="500.0" prefWidth="800.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="№" />
+          <TableColumn prefWidth="75.0" text="Материал" />
+            <TableColumn prefWidth="75.0" text="Ед.Изм." />
+            <TableColumn prefWidth="75.0" text="Кол-во" />
+            <TableColumn prefWidth="104.79998779296875" text="Срок поставки" />
+            <TableColumn prefWidth="91.20001220703125" text="Цена" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
