--- a/src/sample/nameRoom.fxml
+++ b/src/sample/nameRoom.fxml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="281.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TextField layoutX="26.0" layoutY="50.0" />
-      <Text layoutX="40.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Название помещения" />
-      <TextField layoutX="186.0" layoutY="50.0" prefHeight="26.0" prefWidth="58.0" />
-      <Text layoutX="190.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Площадь" />
-      <Button layoutX="109.0" layoutY="91.0" mnemonicParsing="false" text="Добавить" />
-   </children>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="sample.PlumbingController">
+    <children>
+        <TableView prefHeight="200.0" prefWidth="200.0" fx:id="PlumbingTable">
+            <columns>
+                <TableColumn prefWidth="75.0" text="C1">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="name"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="C2">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="quantity"/>
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+        </TableView>
+        <TextField layoutX="226.0" layoutY="28.0" fx:id="userG"/>
+        <Button layoutX="226.0" layoutY="67.0" mnemonicParsing="false" text="Button" onAction="#go"/>
+    </children>
 </AnchorPane>
