--- a/src/sample/CreateRoomPlumbing.fxml
+++ b/src/sample/CreateRoomPlumbing.fxml
@@ -37,10 +37,10 @@
               </columns>
             </TableView>
             <TextField layoutX="14.0" layoutY="14.0" />
-            <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" text="Сохранить" />
-            <TextField layoutY="74.0" prefHeight="26.0" prefWidth="94.0" />
-            <TextField layoutX="151.0" layoutY="74.0" prefHeight="26.0" prefWidth="53.0" />
-            <Button layoutY="49.0" mnemonicParsing="false" text="Добавить" />
+            <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveRoom" text="Сохранить" />
+            <TextField fx:id="textFieldName" layoutY="74.0" prefHeight="26.0" prefWidth="94.0" />
+            <TextField fx:id="textFieldQuantity" layoutX="151.0" layoutY="74.0" prefHeight="26.0" prefWidth="53.0" />
+            <Button layoutY="49.0" mnemonicParsing="false" onAction="#addElement" text="Добавить" />
             <Button layoutX="69.0" layoutY="49.0" mnemonicParsing="false" text="Удалить" />
          </children></AnchorPane>
   </content>
