--- a/src/sample/CreateRoomPlumbing.fxml
+++ b/src/sample/CreateRoomPlumbing.fxml
@@ -7,41 +7,49 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.PlumbingController">
-   <content>
-    <AnchorPane prefHeight="400.0" prefWidth="600.0">
-         <children>
-            <TableView fx:id="plumbingTable" layoutX="-2.0" AnchorPane.topAnchor="100.0">
-              <columns>
-                <TableColumn fx:id="colName" onEditCommit="#onEditChanged" prefWidth="95.0" text="Наименование" />
-                <TableColumn prefWidth="56.800048828125" text="Ед. изм." />
-                  <TableColumn fx:id="colQuantity" prefWidth="51.20001220703125" text="Кол-во" />
-                  <TableColumn prefWidth="99.20001220703125" text="Цена порядковая за ед." />
-                  <TableColumn prefWidth="75.0" text="Цена по КП за ед." />
-                  <TableColumn prefWidth="75.0" text="Цена по КП под ключ" />
-                  <TableColumn prefWidth="75.0" text="Стоимость по КП за ед." />
-                  <TableColumn prefWidth="75.0" text="Порядок цен" />
-                  <TableColumn prefWidth="75.0" text="Стоимость по КП" />
-                  <TableColumn prefWidth="75.0" text="Срок изготовления/ поставки" />
-                  <TableColumn prefWidth="75.0" text="Стоимость фактическая" />
-                  <TableColumn prefWidth="75.0" text="Разница фактическая" />
-                  <TableColumn prefWidth="75.0" text="Оплачено" />
-                  <TableColumn prefWidth="50.0" text="Остаток" />
-                  <TableColumn prefWidth="75.0" text="Дата поставки" />
-                  <TableColumn prefWidth="75.0" text="КП плановое" />
-                  <TableColumn prefWidth="75.0" text="КП фактическое" />
-                  <TableColumn prefWidth="50.0" text="Счет" />
-                  <TableColumn prefWidth="75.0" text="Контакты" />
-                  <TableColumn prefWidth="75.0" text="Примечания" />
-                  <TableColumn prefWidth="75.0" text="Характеристики" />
-              </columns>
-            </TableView>
-            <TextField fx:id="nameRoom" layoutX="14.0" layoutY="14.0" />
-            <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveRoom" text="Сохранить" />
-            <TextField fx:id="textFieldName" layoutY="74.0" prefHeight="26.0" prefWidth="94.0" />
-            <TextField fx:id="textFieldQuantity" layoutX="151.0" layoutY="74.0" prefHeight="26.0" prefWidth="53.0" />
-            <Button layoutY="49.0" mnemonicParsing="false" onAction="#addElement" text="Добавить" />
-            <Button layoutX="69.0" layoutY="49.0" mnemonicParsing="false" onAction="#deleteElement" text="Удалить" />
-         </children></AnchorPane>
-  </content>
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.PlumbingController">
+    <content>
+        <AnchorPane prefHeight="400.0" prefWidth="600.0">
+            <children>
+                <TableView fx:id="plumbingTable" layoutX="-2.0" AnchorPane.topAnchor="100.0">
+                    <columns>
+                        <TableColumn fx:id="colName" onEditCommit="#onEditChanged" prefWidth="95.0"
+                                     text="Наименование"/>
+                        <TableColumn prefWidth="55.0" text="Ед. изм."/>
+                        <TableColumn fx:id="colQuantity" prefWidth="51.20001220703125" text="Кол-во"/>
+                        <TableColumn fx:id="colPrice" prefWidth="99.0" text="Цена порядковая за ед."/>
+                        <TableColumn maxWidth="75.0" prefWidth="75.0" text="Цена по КП за ед."/>
+                        <TableColumn prefWidth="75.0" text="Цена по КП под ключ"/>
+                        <TableColumn prefWidth="75.0" text="Стоимость по КП за ед."/>
+                        <TableColumn prefWidth="75.0" text="Порядок цен"/>
+                        <TableColumn prefWidth="75.0" text="Стоимость по КП"/>
+                        <TableColumn prefWidth="75.0" text="Срок изготовления/ поставки"/>
+                        <TableColumn prefWidth="75.0" text="Стоимость фактическая"/>
+                        <TableColumn prefWidth="75.0" text="Разница фактическая"/>
+                        <TableColumn prefWidth="75.0" text="Оплачено"/>
+                        <TableColumn prefWidth="50.0" text="Остаток"/>
+                        <TableColumn prefWidth="75.0" text="Дата поставки"/>
+                        <TableColumn prefWidth="75.0" text="КП плановое"/>
+                        <TableColumn prefWidth="75.0" text="КП фактическое"/>
+                        <TableColumn prefWidth="50.0" text="Счет"/>
+                        <TableColumn prefWidth="75.0" text="Контакты"/>
+                        <TableColumn prefWidth="75.0" text="Примечания"/>
+                        <TableColumn prefWidth="75.0" text="Характеристики"/>
+                    </columns>
+                </TableView>
+                <TextField fx:id="nameRoom" layoutX="14.0" layoutY="14.0"/>
+                <Button layoutX="173.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveRoom" text="Сохранить"/>
+                <TextField fx:id="textFieldName" layoutY="74.0" prefHeight="26.0" prefWidth="94.0"/>
+                <TextField fx:id="textFieldQuantity" layoutX="151.0" layoutY="74.0" prefHeight="26.0" prefWidth="53.0"/>
+                <Button layoutY="49.0" mnemonicParsing="false" onAction="#addElement" text="Добавить"/>
+                <Button layoutX="69.0" layoutY="49.0" mnemonicParsing="false" onAction="#deleteElement" text="Удалить"/>
+                <TextField layoutX="94.0" layoutY="74.0" prefHeight="26.0" prefWidth="57.0"/>
+                <TextField fx:id="textFieldPrice" layoutX="205.0" layoutY="74.0" prefHeight="26.0" prefWidth="97.0"/>
+                <TextField layoutX="303.0" layoutY="74.0" prefHeight="26.0" prefWidth="75.0"/>
+                <TextField layoutX="378.0" layoutY="74.0" prefHeight="26.0" prefWidth="75.0"/>
+                <TextField layoutX="453.0" layoutY="74.0" prefHeight="26.0" prefWidth="75.0"/>
+            </children>
+        </AnchorPane>
+    </content>
 </ScrollPane>
