--- a/src/sample/nameProject.fxml
+++ b/src/sample/nameProject.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="336.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="336.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextField layoutX="38.0" layoutY="40.0" prefHeight="26.0" prefWidth="261.0" promptText="Название проекта" />
       <TextField layoutX="38.0" layoutY="89.0" prefHeight="26.0" prefWidth="261.0" promptText="Общая площадь" />
@@ -12,5 +14,10 @@
       <TextField layoutX="38.0" layoutY="215.0" prefHeight="26.0" prefWidth="262.0" promptText="Скидка за ДП %" />
       <Button layoutX="37.0" layoutY="132.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="+ Добавить помещение" />
       <Button layoutX="37.0" layoutY="255.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="+ Добавить этап оплаты" />
+      <ToggleButton layoutX="227.0" layoutY="300.0" mnemonicParsing="false" text="Р" />
+      <ToggleButton layoutX="251.0" layoutY="300.0" mnemonicParsing="false" text="\$" />
+      <ToggleButton layoutX="275.0" layoutY="300.0" mnemonicParsing="false" text="Э" />
+      <Text layoutX="153.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Валюта :" />
+      <Button layoutX="40.0" layoutY="339.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="Сформировать" />
    </children>
 </AnchorPane>
