--- a/src/sample/SelectProject.fxml
+++ b/src/sample/SelectProject.fxml
@@ -7,19 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SelectProjectController">
-   <children>
-      <MenuBar layoutX="78.0" layoutY="22.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Выберите проект">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Проект 1" />
-                  <MenuItem mnemonicParsing="false" text="Проект 2" />
-                  <MenuItem mnemonicParsing="false" text="Проект 3" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <Button fx:id="create" layoutX="78.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="128.0" onAction="#createProject" text="Создать" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0"
+            prefWidth="285.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="sample.SelectProjectController">
+    <children>
+        <MenuBar layoutX="78.0" layoutY="22.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="Выберите проект">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Проект 1"/>
+                        <MenuItem mnemonicParsing="false" text="Проект 2"/>
+                        <MenuItem mnemonicParsing="false" text="Проект 3"/>
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <Button fx:id="create" layoutX="78.0" layoutY="63.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="128.0"
+                onAction="#createProject" text="Создать"/>
+    </children>
 </AnchorPane>
