--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,7 +16,19 @@
   <tabs>
       <Tab text="Проект">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <MenuButton layoutX="14.0" layoutY="63.0" mnemonicParsing="false" text="Выбрать проект">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                        <MenuItem mnemonicParsing="false" text="Action 1" />
+                    </items>
+                  </MenuButton>
+                  <Button fx:id="createProjectButton" layoutX="14.0" layoutY="31.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="121.0" onAction="#createProject" text="Создать проект" />
+               </children></AnchorPane>
          </content>
       </Tab>
     <Tab text="Итоговая">
@@ -101,7 +115,7 @@
                                     <TextField fx:id="textFieldQuantity" layoutX="202.0" layoutY="42.0" prefHeight="26.0" prefWidth="58.0" promptText="Кол-во" />
                                     <TextField fx:id="textFieldPrice" layoutX="260.0" layoutY="42.0" promptText="Цена порядковая за ед." />
                                     <Button layoutX="2.0" layoutY="4.0" mnemonicParsing="false" onAction="#addElementPlumping" text="+" />
-                                    <Button layoutX="27.0" layoutY="4.0" mnemonicParsing="false" onAction="#deleteElementPlumping" text="Удалить" />
+                                    <Button layoutX="27.0" layoutY="4.0" mnemonicParsing="false" onAction="#deleteElementPlumping" text="X" />
                                     <Button layoutX="87.0" layoutY="4.0" mnemonicParsing="false" onAction="#saveElementPlumping" text="Сохранить" />
                                  </children>
                               </AnchorPane>
